//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  fullName String [not null]
  uniqueName String [unique, not null]
  phoneNumber String [unique, not null]
  address String [not null]
  avatar String [default: '']
  role Role [not null, default: 'USER']
  appointmentsAsAuthor Appointment [not null]
  appointmentsAsPatient Appointment [not null]
  researchDocumentsAsAuthour ResearchDocument [not null]
  researchDocumentsAsPatient ResearchDocument [not null]
  doctor Doctor
  authoredFiles FileEntity [not null]
}

Table Appointment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content Json
  author User [not null]
  authorId String [not null]
  patient User [not null]
  patientId String [not null]
}

Table ResearchDocument {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content Json
  author User [not null]
  authorId String [not null]
  patient User [not null]
  patientId String [not null]
}

Table Clinic {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  email String [not null]
  address String [not null]
  coverPhoto String [not null]
  phoneNumber String [not null]
  description String [not null]
  doctorIds String[] [not null]
  doctors Doctor [not null]
}

Table Doctor {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  calLink String [not null, default: '']
  calUserId Int [not null, default: 0]
  user User [not null]
  userId String [unique, not null]
  specializationsIds String[] [not null]
  specializations Specialization [not null]
  clinicId String
  clinic Clinic
  description Json [default: '{}']
}

Table Specialization {
  id String [pk]
  name String [not null]
  description String [not null]
  doctorIds String[] [not null]
  Doctor Doctor [not null]
}

Table FileEntity {
  id String [pk]
  fileName String [not null]
  fileUrl String [not null]
  key String [not null]
  authorId String [unique]
  author User
  metadata Json [not null, default: '{}']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Pharmacy {
  id String [pk]
  name String [not null]
  label String
  company String
  price Float[] [not null]
  photoUrls String[] [not null]
}

Enum Role {
  ADMIN
  USER
  PATIENT
  DOCTOR
  LABORATORY
}

Ref: Appointment.authorId > User.id

Ref: Appointment.patientId > User.id

Ref: ResearchDocument.authorId > User.id

Ref: ResearchDocument.patientId > User.id

Ref: Doctor.userId - User.id

Ref: Doctor.specializationsIds > Specialization.id

Ref: Doctor.clinicId > Clinic.id

Ref: Specialization.doctorIds > Doctor.id

Ref: FileEntity.authorId > User.id